; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_pg_get_indexdef_columns.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_pg_get_indexdef_columns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRETTYFLAG_PAREN = common dso_local global i32 0, align 4
@PRETTYFLAG_INDENT = common dso_local global i32 0, align 4
@PRETTYFLAG_SCHEMA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pg_get_indexdef_columns(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32, i32* @PRETTYFLAG_PAREN, align 4
  %10 = load i32, i32* @PRETTYFLAG_INDENT, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @PRETTYFLAG_SCHEMA, align 4
  %13 = or i32 %11, %12
  br label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @PRETTYFLAG_INDENT, align 4
  br label %16

16:                                               ; preds = %14, %8
  %17 = phi i32 [ %13, %8 ], [ %15, %14 ]
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i8* @pg_get_indexdef_worker(i32 %18, i32 0, i32* null, i32 1, i32 1, i32 0, i32 0, i32 %19, i32 0)
  ret i8* %20
}

declare dso_local i8* @pg_get_indexdef_worker(i32, i32, i32*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
